--- a/mnist/xgboost.ipynb
+++ b/mnist/xgboost.ipynb
@@ -404,49 +404,47 @@
     }
    ],
    "source": [
-    "# Define parameter options\n",
+    "# Input data configuration\n",
+    "input_data_config = [\n",
+    "    {\n",
+    "        \"ChannelName\": \"train\",\n",
+    "        \"DataSource\": {\n",
+    "            \"S3DataSource\": {\n",
+    "                \"S3DataType\": \"S3Prefix\",\n",
+    "                \"S3Uri\": f\"{bucket_path}/data/train.libsvm\",\n",
+    "                \"S3DataDistributionType\": \"FullyReplicated\"\n",
+    "            }\n",
+    "        },\n",
+    "        \"ContentType\": \"libsvm\",\n",
+    "        \"CompressionType\": \"None\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"ChannelName\": \"validation\",\n",
+    "        \"DataSource\": {\n",
+    "            \"S3DataSource\": {\n",
+    "                \"S3DataType\": \"S3Prefix\",\n",
+    "                \"S3Uri\": f\"{bucket_path}/data/validation.libsvm\",\n",
+    "                \"S3DataDistributionType\": \"FullyReplicated\"\n",
+    "            }\n",
+    "        },\n",
+    "        \"ContentType\": \"libsvm\",\n",
+    "        \"CompressionType\": \"None\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Base training parameters\n",
     "training_parameters = {\n",
     "    \"AlgorithmSpecification\": {\"TrainingImage\": container, \"TrainingInputMode\": \"File\"},\n",
     "    \"RoleArn\": role,\n",
     "    \"OutputDataConfig\": {\"S3OutputPath\": f\"{bucket_path}/{prefix}/xgboost\"},\n",
     "    \"ResourceConfig\": {\"InstanceCount\": 1, \"InstanceType\": \"ml.m5.12xlarge\", \"VolumeSizeInGB\": 5},\n",
     "    \"HyperParameters\": {\n",
-    "        \"max_depth\": \"5\",\n",
-    "        \"eta\": \"0.2\",\n",
-    "        \"gamma\": \"4\",\n",
-    "        \"min_child_weight\": \"6\",\n",
-    "        \"verbosity\": \"0\",\n",
     "        \"objective\": \"multi:softmax\",\n",
     "        \"num_class\": \"10\",\n",
-    "        \"num_round\": \"10\",\n",
+    "        \"verbosity\": \"0\"\n",
     "    },\n",
     "    \"StoppingCondition\": {\"MaxRuntimeInSeconds\": 86400},\n",
-    "    \"InputDataConfig\": [\n",
-    "        {\n",
-    "            \"ChannelName\": \"train\",\n",
-    "            \"DataSource\": {\n",
-    "                \"S3DataSource\": {\n",
-    "                    \"S3DataType\": \"S3Prefix\",\n",
-    "                    \"S3Uri\": f\"{bucket_path}/{prefix}/train/\",\n",
-    "                    \"S3DataDistributionType\": \"FullyReplicated\",\n",
-    "                }\n",
-    "            },\n",
-    "            \"ContentType\": \"libsvm\",\n",
-    "            \"CompressionType\": \"None\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"ChannelName\": \"validation\",\n",
-    "            \"DataSource\": {\n",
-    "                \"S3DataSource\": {\n",
-    "                    \"S3DataType\": \"S3Prefix\",\n",
-    "                    \"S3Uri\": f\"{bucket_path}/{prefix}/validation/\",\n",
-    "                    \"S3DataDistributionType\": \"FullyReplicated\",\n",
-    "                }\n",
-    "            },\n",
-    "            \"ContentType\": \"libsvm\",\n",
-    "            \"CompressionType\": \"None\",\n",
-    "        },\n",
-    "    ],\n",
+    "    \"InputDataConfig\": input_data_config,\n",
     "}\n",
     "\n",
     "def tune_hyperparameters():\n",
@@ -454,7 +452,7 @@
     "    tuning_job_name = f'xgboost-{strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())}'\n",
     "    print(\"Tuning job name is:\", tuning_job_name)\n",
     "\n",
-    "    # Define tuning configuration\n",
+    "    # Tuning job configuration\n",
     "    tuning_job_config = {\n",
     "        \"ParameterRanges\": {\n",
     "            \"CategoricalParameterRanges\": [],\n",
@@ -478,52 +476,15 @@
     "        \"HyperParameterTuningJobObjective\": {\"MetricName\": \"validation:merror\", \"Type\": \"Minimize\"},\n",
     "    }\n",
     "\n",
-    "    # Use a deep copy of your original training parameters and adjust for tuning\n",
+    "    # Prepare training job definition for tuning\n",
     "    training_job_definition = copy.deepcopy(training_parameters)\n",
-    "    del training_job_definition[\"HyperParameters\"]\n",
-    "\n",
-    "    # Update the S3 output path and static hyperparameters\n",
     "    training_job_definition[\"OutputDataConfig\"][\"S3OutputPath\"] = f\"{bucket_path}/tuning-jobs\"\n",
     "    training_job_definition[\"StaticHyperParameters\"] = {\n",
     "        \"objective\": \"multi:softmax\",\n",
-    "        \"verbosity\": \"2\",\n",
     "        \"num_class\": \"10\",\n",
+    "        \"verbosity\": \"2\",  # Adjust verbosity for tuning\n",
     "    }\n",
-    "\n",
-    "    # Update ResourceConfig to use ml.m5.4xlarge, which is available on the AWS free tier\n",
-    "    training_job_definition[\"ResourceConfig\"] = {\n",
-    "        \"InstanceCount\": 1,\n",
-    "        \"InstanceType\": \"ml.m5.4xlarge\",\n",
-    "        \"VolumeSizeInGB\": 5,\n",
-    "    }\n",
-    "\n",
-    "    # Set the InputDataConfig to use S3DataSource\n",
-    "    training_job_definition[\"InputDataConfig\"] = [\n",
-    "        {\n",
-    "            \"ChannelName\": \"train\",\n",
-    "            \"DataSource\": {\n",
-    "                \"S3DataSource\": {\n",
-    "                    \"S3DataType\": \"S3Prefix\",\n",
-    "                    \"S3Uri\": f\"{bucket_path}/data/train.libsvm\",\n",
-    "                    \"S3DataDistributionType\": \"FullyReplicated\"\n",
-    "                }\n",
-    "            },\n",
-    "            \"ContentType\": \"libsvm\",\n",
-    "            \"CompressionType\": \"None\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"ChannelName\": \"validation\",\n",
-    "            \"DataSource\": {\n",
-    "                \"S3DataSource\": {\n",
-    "                    \"S3DataType\": \"S3Prefix\",\n",
-    "                    \"S3Uri\": f\"{bucket_path}/data/validation.libsvm\",\n",
-    "                    \"S3DataDistributionType\": \"FullyReplicated\"\n",
-    "                }\n",
-    "            },\n",
-    "            \"ContentType\": \"libsvm\",\n",
-    "            \"CompressionType\": \"None\"\n",
-    "        }\n",
-    "    ]\n",
+    "    training_job_definition[\"ResourceConfig\"][\"InstanceType\"] = \"ml.m5.4xlarge\"  # Adjust instance type for tuning\n",
     "\n",
     "    # Start the hyperparameter tuning job\n",
     "    print(f\"Creating a tuning job with name: {tuning_job_name}.\")\n",
@@ -534,15 +495,11 @@
     "    )\n",
     "\n",
     "    # Monitor the tuning job status\n",
-    "    status = sm.describe_hyper_parameter_tuning_job(HyperParameterTuningJobName=tuning_job_name)[\n",
-    "        \"HyperParameterTuningJobStatus\"\n",
-    "    ]\n",
+    "    status = sm.describe_hyper_parameter_tuning_job(HyperParameterTuningJobName=tuning_job_name)[\"HyperParameterTuningJobStatus\"]\n",
     "    print(status)\n",
     "    while status != \"Completed\" and status != \"Failed\":\n",
     "        sleep(60)\n",
-    "        status = sm.describe_hyper_parameter_tuning_job(HyperParameterTuningJobName=tuning_job_name)[\n",
-    "            \"HyperParameterTuningJobStatus\"\n",
-    "        ]\n",
+    "        status = sm.describe_hyper_parameter_tuning_job(HyperParameterTuningJobName=tuning_job_name)[\"HyperParameterTuningJobStatus\"]\n",
     "        print(status)\n",
     "\n",
     "    # Analyze tuning results once completed\n",
@@ -577,7 +534,7 @@
     "              f\"Objective Metric: {training_job['FinalHyperParameterTuningJobObjectiveMetric']['Value']}\")\n",
     "\n",
     "# Execute hyperparameter tuning jobs\n",
-    "tune_hyperparameters()"
+    "tune_hyperparameters()\n"
    ]
   }
  ],
